# projet_Spatial

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SPRINT3_REDIS_PERFORMANCE.md  SPRINT3_SUMMARY.md  cheatsheet.txt  docker-compose.yml  last_cluster_response.json  quick-start.bat  setup.bat  setup.ps1  test_sprint3_redis.ps1
antennes-5g/: CMakeLists.txt
antennes-5g/tests/: ObstacleControllerTest.cc
config/: config.json
scripts/: init.sql
src/: main.cpp
src/controllers/: AntennaZoneController.cc  AntennaZoneController.h  AntenneController.cc  AntenneController.h  CoverageController.cc  CoverageController.h  ObstacleController.cc  ObstacleController.h  OperatorController.cc  OperatorController.h  OptimizationController.cc  OptimizationController.h  SimulationController.cc  SimulationController.h  ZoneController.cc  ZoneController.h  ZoneObstacleController.cc  ZoneObstacleController.h
src/filters/: CorsFilter.cc  CorsFilter.h
src/models/: Antenne.h  CoverageResult.h  Obstacle.h  Operator.h  OptimizationRequest.h  Zone.h
src/services/: AntennaZoneService.cc  AntennaZoneService.h  AntenneService.cc  AntenneService.h  CacheService.cc  CacheService.h  CoverageService.cc  CoverageService.h  ObstacleService.cc  ObstacleService.h  OperatorService.cc  OperatorService.h  OptimizationService.cc  OptimizationService.h  SimulationService.cc  SimulationService.h  ZoneObstacleService.cc  ZoneObstacleService.h  ZoneService.cc  ZoneService.h
src/utils/: ErrorHandler.h  PaginationHelper.cc  PaginationHelper.h  PaginationMeta.h  Validator.h
tests/: AntenneServiceTest.h  postman_collection.json
